Updating requirements.txt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,12 @@ uvicorn
 mongoengine
 herepy
 loguru
+dnspython
 
 #dev
 pytest
+anyio 
+pytest-asyncio 
+pytest-tornasync 
+pytest-trio 
+pytest-twisted
